--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,194 +1,75 @@
 name: CI
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
+    branches: [ main ]
+  push:
     branches: [ main ]
 
 jobs:
-  lint:
+  verify-fast:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-    
-    - name: Setup pnpm
-      uses: pnpm/action-setup@v2
-      with:
-        version: 8
-    
-    - name: Install dependencies
-      run: pnpm install --frozen-lockfile
-    
-    - name: Run linter
-      run: pnpm run lint
+      - uses: actions/checkout@v4
 
-  typecheck:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-    
-    - name: Setup pnpm
-      uses: pnpm/action-setup@v2
-      with:
-        version: 8
-    
-    - name: Install dependencies
-      run: pnpm install --frozen-lockfile
-    
-    - name: Run typecheck
-      run: pnpm run typecheck
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
 
-  test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-    
-    - name: Setup pnpm
-      uses: pnpm/action-setup@v2
-      with:
-        version: 8
-    
-    - name: Install dependencies
-      run: pnpm install --frozen-lockfile
-    
-    - name: Run tests
-      run: pnpm run test
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 9
 
-  build:
-    runs-on: ubuntu-latest
-    needs: [lint, typecheck, test]
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-    
-    - name: Setup pnpm
-      uses: pnpm/action-setup@v2
-      with:
-        version: 8
-    
-    - name: Install dependencies
-      run: pnpm install --frozen-lockfile
-    
-    - name: Build
-      run: pnpm run build
-    
-    - name: Verify CLI is executable
-      run: |
-        chmod +x dist/cli.js
-        node dist/cli.js --version
-    
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: dist
-        path: dist/
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
 
-  integration-test:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-    
-    - name: Setup pnpm
-      uses: pnpm/action-setup@v2
-      with:
-        version: 8
-    
-    - name: Install dependencies
-      run: pnpm install --frozen-lockfile
-    
-    - name: Download build artifacts
-      uses: actions/download-artifact@v4
-      with:
-        name: dist
-        path: dist/
-    
-    - name: Make CLI executable
-      run: chmod +x dist/cli.js
-    
-    - name: Test CLI commands
-      run: |
-        # Set required env vars
-        export GROWTH_TENANT_ID="test-tenant"
-        export GROWTH_PROJECT_ID="test-project"
-        export GROWTH_PROFILES_DIR="./profiles"
-        
-        # Test SEO scan
-        node dist/cli.js seo-scan --path ./examples/site-export --type html_export --output /tmp/seo-test.json
-        test -f /tmp/seo-test.json
-        
-        # Test funnel analysis
-        node dist/cli.js funnel --events ./examples/data/events.json --steps "page_view,signup_start,signup_complete" --name "test-funnel" --output /tmp/funnel-test.json
-        test -f /tmp/funnel-test.json
-        
-        # Test content draft
-        node dist/cli.js draft-content --profile jobforge --type meta_description --goal "Test goal" --output /tmp/content-test.json
-        test -f /tmp/content-test.json
-    
-    - name: Verify output structure
-      run: |
-        # Verify SEO audit output
-        cat /tmp/seo-test.json | jq -e '.tenant_id'
-        cat /tmp/seo-test.json | jq -e '.findings'
-        cat /tmp/seo-test.json | jq -e '.summary'
-        
-        # Verify funnel output
-        cat /tmp/funnel-test.json | jq -e '.total_entrances'
-        cat /tmp/funnel-test.json | jq -e '.steps'
-        
-        # Verify content draft output
-        cat /tmp/content-test.json | jq -e '.draft.body'
+      - name: Verify (fast)
+        run: pnpm run verify:fast
 
-  publish:
+  verify-full:
     runs-on: ubuntu-latest
-    needs: [lint, typecheck, test, build, integration-test]
+    needs: verify-fast
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        registry-url: 'https://registry.npmjs.org'
-    
-    - name: Setup pnpm
-      uses: pnpm/action-setup@v2
-      with:
-        version: 8
-    
-    - name: Install dependencies
-      run: pnpm install --frozen-lockfile
-    
-    - name: Build
-      run: pnpm run build
-    
-    - name: Publish to NPM (dry-run)
-      run: pnpm publish --dry-run --no-git-checks
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 9
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Verify (full)
+        run: pnpm run verify:full
+
+  docs-verify:
+    runs-on: ubuntu-latest
+    needs: verify-fast
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 9
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Verify docs
+        run: pnpm run docs:verify
