--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "check": "pnpm run lint && pnpm run typecheck && pnpm run test",
+    "verify:fast": "pnpm run lint && pnpm run typecheck && pnpm run build",
+    "verify:full": "pnpm run verify:fast && pnpm run test",
+    "docs:verify": "node scripts/docs-verify.mjs",
     "runnerless:audit": "echo 'Install @autopilot/audit-cli and run: autopilot-audit runnerless .'",
     "prepublishOnly": "pnpm run build"
   },
@@ -33,9 +36,6 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@autopilot/contracts": "file:../autopilot-suite/packages/contracts",
-    "@autopilot/jobforge-client": "file:../autopilot-suite/packages/jobforge-client",
-    "@autopilot/profiles": "file:../autopilot-suite/packages/profiles",
     "commander": "^12.1.0",
     "zod": "^3.23.8",
     "cheerio": "^1.0.0-rc.12",
@@ -47,6 +47,8 @@
     "@typescript-eslint/eslint-plugin": "^8.19.0",
     "@typescript-eslint/parser": "^8.19.0",
     "eslint": "^9.17.0",
+    "tsx": "^4.19.2",
+    "tsup": "^8.3.5",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
   },
