--- a/package.json
+++ b/package.json
@@ -38,19 +38,20 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "commander": "^12.1.0",
-    "zod": "^3.23.8",
     "cheerio": "^1.0.0-rc.12",
+    "commander": "^12.1.0",
     "glob": "^11.0.0",
-    "yaml": "^2.6.1"
+    "yaml": "^2.6.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.17.0",
     "@typescript-eslint/eslint-plugin": "^8.19.0",
     "@typescript-eslint/parser": "^8.19.0",
     "eslint": "^9.17.0",
-    "tsx": "^4.19.2",
+    "globals": "^17.3.0",
     "tsup": "^8.3.5",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
   },
